# scoutermail

./: .gitignore  README.md  app.go  database.go  email.go  go.mod  go.sum  main.go  package-lock.json  package.json  wails.json
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-19-scoutermail-implementation.md
docs/superpowers/specs/: 2026-03-19-scoutermail-design.md  2026-03-21-calendar-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: AccountManager.svelte  App.svelte  EmailList.svelte  EmailView.svelte  Notification.svelte  Settings.svelte  Sidebar.svelte  app.css
frontend/src/lib/components/: AccountSetup.svelte  AddressInput.svelte  AttachmentList.svelte  CalendarView.svelte  ComposeView.svelte  ContactsList.svelte  DraftsList.svelte  FolderList.svelte  HelpOverlay.svelte  HintBar.svelte  InviteCard.svelte  MessageList.svelte  Onboarding.svelte  ReadingPane.svelte  RuleEditor.svelte  SearchBar.svelte  SignatureEditor.svelte  StatusBar.svelte  ToastContainer.svelte
frontend/wailsjs/go/: models.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/accounts/: keychain.rs  manager.rs  mod.rs  oauth.rs
src-tauri/src/calendar/: parser.rs
src-tauri/src/imap/: client.rs  idle.rs  mod.rs  sync.rs
src-tauri/src/parser/: mime.rs  mod.rs  threading.rs
src-tauri/src/rules/: engine.rs
src-tauri/src/smtp/: client.rs
src-tauri/src/store/: db.rs  search.rs
(+8 files in other folders)
