[package]
name = "scoutermail"
version = "0.1.0"
description = "A lightweight vim-driven desktop email client"
edition = "2021"

[lib]
name = "scoutermail_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tantivy = "0.22"
async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.5", default-features = false, features = ["runtime-tokio"] }
futures = "0.3"
mailparse = "0.15"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
base64 = "0.22"
ical = "0.11"
open = "5.3.3"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3"
